--- a/hibernateAndJpa/pom.xml
+++ b/hibernateAndJpa/pom.xml
@@ -26,9 +26,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
-		</dependency>
+		</dependency>				
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>		
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
