--- a/hibernateAndJpa/pom.xml
+++ b/hibernateAndJpa/pom.xml
@@ -30,7 +30,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
-		</dependency>		
+		</dependency>	
+		<dependency>
+		    <groupId>com.mysql</groupId>
+		    <artifactId>mysql-connector-j</artifactId>
+		    <version>8.0.31</version>
+		</dependency>	
 	</dependencies>
 	<build>
 		<plugins>
